# 1sec

./: .gitignore  .gitmodules  Cargo.toml  HACKING.md  LICENSE  README.md  build.sh  canister_ids.json  dfx.json  flake.nix  local_restore.sh  package-lock.json  package.json  rust-toolchain.toml  upgrade_ledger_prod.sh  upgrade_prod.sh  upgrade_staging.sh
.cargo/: config.toml
.github/workflows/: ci.yml
backup/: Cargo.toml
backup/src/: main.rs
canisters/: README.md
contracts/evm/: README.md  foundry.toml
contracts/evm/src/: Locker.sol  Token.sol
contracts/evm/test/: Locker.t.sol  Token.t.sol
frontend/: .gitignore  .prettierignore  package.json  playwright.config.ts  process-env.js  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/declarations/ck_unwrap/: ck_unwrap.did.ts  index.js
frontend/src/declarations/icp_ledger/: icp_ledger.did.d.ts  index.js
frontend/src/declarations/icrc_ledger/: icrc_ledger.did.d.ts  index.js
frontend/src/declarations/one_sec/: index.js  one_sec.did.d.ts
frontend/src/lib/: env.ts  resultHandler.ts  stores.ts  toast.ts  types.ts  utils.ts
frontend/src/lib/components/: Address.svelte  BridgeForm.svelte  BridgeStatus.svelte  ConnectWallet.svelte  Dashboard.svelte  DefaultHistory.svelte  Deposit.svelte  FeeDropDown.svelte  Footer.svelte  InputAmount.svelte  InputAssetButton.svelte  InputReceiver.svelte  InputSender.svelte  Menu.svelte  MobileHistory.svelte  Navbar.svelte  ReceiveAmount.svelte  SearchInput.svelte  Send.svelte  SendAddressInput.svelte  SendAssetButton.svelte  SendAssetInput.svelte  Toast.svelte  TransactionHistory.svelte  WalletInfo.svelte  WalletTokenInfo.svelte
frontend/src/lib/icons/: AnalyticsIcon.svelte  ArrowIcon.svelte  BackIcon.svelte  CheckIcon.svelte  ClockIcon.svelte  CloseIcon.svelte  ConnectIcon.svelte  CopyIcon.svelte  DepositIcon.svelte  DownArrowIcon.svelte  DownIcon.svelte  ErrorIcon.svelte  ExchangeIcon.svelte  GasIcon.svelte  InfoIcon.svelte  MenuIcon.svelte  PlusIcon.svelte  PowerOffIcon.svelte  ReceiptIcon.svelte  RedirectIcon.svelte  SearchIcon.svelte  SendIcon.svelte  SuccessIcon.svelte  WalletIcon.svelte  WarningIcon.svelte
frontend/src/lib/oneSec/: bridge.ts  config.ts  fromCandid.ts  settings.ts  toCandid.ts  types.ts  utils.ts
frontend/src/lib/oneSec/steps/: ckToOneSec.ts  evmToIcpApprove.ts  evmToIcpFetch.ts  evmToIcpFinalize.ts  evmToIcpTransfer.ts  icpToEvmApprove.ts  icpToEvmFinalize.ts  icpToEvmRefund.ts  icpToEvmTransfer.ts  icpToEvmWaitForTx.ts  waitForBlocks.ts
frontend/src/lib/user/: evmUser.ts  icpUser.ts  user.ts
frontend/src/lib/wallet/: coinbasewallet.ts  evm.ts  ii.ts  nfid.ts  plug.ts  types.ts  wallet.ts  walletconnect.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/1address/: +page.svelte
frontend/src/routes/1transfer/: +page.svelte
frontend/src/routes/explorer/: +page.svelte
frontend/static/: .ic-assets.json  documentation.html  manifest.json  robots.txt  sitemap.xml
frontend/static/.well-known/: ic-domains  ii-alternative-origins
frontend/tests/: e2e.spec.ts  lib.spec.ts  utils.ts
ic_wasm_utils/src/: lib.rs  main.rs
one_sec/: Cargo.toml  one_sec.did  prod_init_arg.did  prod_upgrade_arg.did  test_init_arg.did  test_upgrade_arg.did
one_sec/src/: config.rs  dashboard.rs  event.rs  guards.rs  lib.rs  logs.rs  main.rs  management.rs  metrics.rs  state.rs  storage.rs  task.rs
one_sec/src/api/: dev.rs  icrc21.rs  mod.rs  queries.rs  types.rs  updates.rs
one_sec/src/cbor/: account_id.rs  mod.rs  principal.rs  tests.rs
one_sec/src/evm/: config.rs  event.rs  evm_rpc.rs  fee.rs  mod.rs  rlp_encode.rs  state.rs  task.rs  tx.rs
one_sec/src/evm/forwarder/: config.rs  endpoint.rs  mod.rs  state.rs  task.rs
one_sec/src/evm/ledger/: config.rs  event.rs  mod.rs  parser.rs  state.rs  task.rs  tests.rs  tx.rs
one_sec/src/evm/prover/: config.rs  endpoint.rs  forest.rs  head.rs  mod.rs  proof.rs  state.rs  task.rs
one_sec/src/evm/reader/: config.rs  event.rs  mod.rs  state.rs  task.rs  tests.rs
one_sec/src/evm/writer/: config.rs  event.rs  mod.rs  state.rs  task.rs  tests.rs
one_sec/src/flow/: config.rs  endpoint.rs  event.rs  mod.rs  state.rs  tests.rs  trace.rs
one_sec/src/icp/: config.rs  event.rs  exchange_rate.rs  mod.rs  state.rs  tasks.rs
one_sec/src/icp/ledger/: config.rs  event.rs  mod.rs  state.rs  task.rs  tests.rs
one_sec/src/numeric/: amount128.rs  amount64.rs  mod.rs
one_sec/templates/: dashboard.html
relayer/: Cargo.toml  run.sh
relayer/src/: main.rs
relayer/src/arbitrum/: mod.rs  tx.rs
relayer/src/ethereum/: mod.rs
relayer/src/forwarder/: mod.rs
relayer/src/merkle/: mod.rs
relayer/src/optimism/: mod.rs
tests/: Cargo.toml  build.rs  canisters.sh
tests/src/: evm_tests.rs  icp_tests.rs  lib.rs
tests/src/helpers/: evm.rs  http_outcalls.rs  http_requests.json  icp.rs
