[workspace]
members = [
    "ic_wasm_utils",
    "one_sec",
    "relayer",
    "backup",
    "tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
one_sec = { path = "one_sec" }

askama = "0.12.1"
assert_matches = "1.5.0"
candid = "0.10.14"
candid_parser = "0.1.4"
cargo_metadata = "0.19.1"
dirs = "5.0"
ethabi = "18.0.0"
ethnum = "1.5.0"
evm-rpc-client = { git = "https://github.com/dfinity/ic.git", rev = "5128134d24b7a5b8e24a3d5d40c4cce9d81fd375" }
evm_rpc_types = "1.4.0"
hex = { version = "0.4.3", features = ["serde"] }
ic0 = "0.23.0"
ic-canister-log = "0.2.0"
ic-http-types = "0.1.0"
ic-cdk = "0.17.1"
ic-cdk-timers = "0.10"
ic-secp256k1 = "0.1.0"
ic-crypto-sha2 = { git = "https://github.com/dfinity/ic.git", rev = "5128134d24b7a5b8e24a3d5d40c4cce9d81fd375" }
ic-management-canister-types-private = { git = "https://github.com/dfinity/ic.git", rev = "5128134d24b7a5b8e24a3d5d40c4cce9d81fd375" }
ic-metrics-encoder = "1.1.1"
ic-ethereum-types = { git = "https://github.com/dfinity/ic.git", rev = "5128134d24b7a5b8e24a3d5d40c4cce9d81fd375" }
ic-sha3 = { git = "https://github.com/dfinity/ic.git", rev = "5128134d24b7a5b8e24a3d5d40c4cce9d81fd375" }
ic-stable-structures = "0.6.7"
ic-xrc-types = "1.2.0"
ic-ledger-types = "0.14.0"
ic_principal = "0.1.1"
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "5128134d24b7a5b8e24a3d5d40c4cce9d81fd375" }
icp-ledger = { git = "https://github.com/dfinity/ic", rev = "5128134d24b7a5b8e24a3d5d40c4cce9d81fd375" }
icrc-cbor = { version = "0.1.0", features = ["u256"] }
icrc-ledger-client-cdk = { git = "https://github.com/dfinity/ic", rev = "5128134d24b7a5b8e24a3d5d40c4cce9d81fd375" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic.git", rev = "5128134d24b7a5b8e24a3d5d40c4cce9d81fd375" }
ic-icrc1-ledger = { git = "https://github.com/dfinity/ic.git", rev = "5128134d24b7a5b8e24a3d5d40c4cce9d81fd375" }
itertools = "0.14.0"
lazy_static = "1.4.0"
# TODO: investigate why version 0.24.2 doesn't work with ic-ethereum-types.
minicbor = { version = "0.19.1", features = ["alloc", "derive"] }
minicbor-derive = "0.15.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
once_cell = "1.18"
pocket-ic = "6.0.0"
proptest = "1.5.0"
prost = "0.12.6"
rlp = "0.5.2"
scopeguard = "1.2.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_bytes = "0.11.15"
serde_cbor = "0.11.2"
serde_json = { version = "^1.0.107" }
sha2 = "0.10.8"
thousands = "0.2"
thiserror = "1.0.63"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
alloy = { version = "0.12", features = ["full"] }
alloy-node-bindings = "0.12.0"
reqwest = { version = "0.12.12", features = [
    "rustls-tls",
], default-features = false }
futures = { version = "0.3", default-features = false }


alloy-consensus = "0.12.5"
alloy-eips = "0.12.5"
alloy-rlp = "0.3.11"
alloy-trie = "0.7.9"
alloy-primitives = "0.8.22"
nybbles = { version = "0.3.4", features = ["rlp"] }
op-alloy-consensus = "0.11.1"
