[package]
name = "one_sec"
version.workspace = true
edition.workspace = true

[lib]
name = "one_sec"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "one_sec"
path = "src/main.rs"

[features]
default = ["js"]
js = ["dep:wasm-bindgen", "dep:getrandom"]
dev = []

[dependencies]
askama.workspace = true
assert_matches.workspace = true
candid.workspace = true
candid_parser.workspace = true
evm-rpc-client.workspace = true
evm_rpc_types.workspace = true
ethabi.workspace = true
ethnum.workspace = true
getrandom = { version = "0.2", features = ["custom"], optional = true }
hex.workspace = true
ic0.workspace = true
ic-http-types.workspace = true
ic-canister-log.workspace = true
ic-cdk.workspace = true
ic-cdk-timers.workspace = true
ic-secp256k1.workspace = true
ic-crypto-sha2.workspace = true
ic-ethereum-types.workspace = true
ic-management-canister-types-private.workspace = true
ic-metrics-encoder.workspace = true
ic-sha3.workspace = true
ic-stable-structures.workspace = true
ic-xrc-types.workspace = true
ic-ledger-types.workspace = true
icrc-cbor.workspace = true
icrc-ledger-client-cdk.workspace = true
icrc-ledger-types.workspace = true
itertools.workspace = true
minicbor.workspace = true
minicbor-derive.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
thousands.workspace = true
rlp.workspace = true
wasm-bindgen = { version = "0.2.84", optional = true }
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-rlp.workspace = true
alloy-trie.workspace = true
alloy-primitives.workspace = true
nybbles.workspace = true
futures.workspace = true

[dev-dependencies]
proptest.workspace = true
prost.workspace = true
